apps/infrastructure/argocd/templates/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo
  namespace: argocd
  labels:
    app.kubernetes.io/name: argocd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    kubernetes.io/ingress.class: internal
    haproxy.org/ssl-passthrough: "true"
spec:
  tls:
    - hosts:
        - argo.private.channings.me
      secretName: argocd-secret
  rules:
    - host: argo.private.channings.me
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: argocd-server
                port:
                  number: 443
